fix: sidebar no longer overlaps on smaller screens

--- a/styles/content.scss
+++ b/styles/content.scss
@@ -25,7 +25,7 @@ html {
   @apply flex;
   @apply flex-row;
   @apply justify-center;
-  @apply lg:col-span-7;
+  @apply lg:col-span-9;
   @apply xl:col-span-8;
   @apply mt-16;
 }
